# borscht-control

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  test_db
include/db/: sql.h
include/server/: server.h
src/: main.c
src/db/: sql.c
src/db/sqlite-amalgamation-3470200/: sqlite3.h
src/server/: server.c
